<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spizzyrichlife.ussrpg_v01.Activities.CharacterView">

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Char. Name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/hpBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameValue"
        android:text="@string/hp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameValue"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/hpBrand"
        android:text="XX"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/spBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameValue"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/hpValue"
        android:text="@string/sp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/spValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameValue"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/spBrand"
        android:text="XX"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cpBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameValue"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/spValue"
        android:text="@string/cp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameValue"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/cpBrand"
        android:text="XX"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/xpBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/xpBrand"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/xpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/xpBrand"
        android:text="XXX"
        android:textSize="20sp" />

</RelativeLayout>
